# python-mapswipe-workers

./: .dockerignore  .firebaserc  .gitignore  .gitmodules  .readthedocs.yml  .travis  .travis-serviceAccountKey.json.enc  .travis.yml  BuildArea_Sentinel_sample_import.json  BuildArea_sample_import.json  CreateDB.sql  Dockerfile  Enable new project types.md  LICENSE  Makefile  Pipfile  README.md  actions.yml  api.md  ci-mapswipe-63a528ed5bb0.json.enc  ci-mapswipe-63a528ed5bb0.json.gpg  ci-mapswipe-firebase-adminsdk-80fzw-ebce84bd5b.json.enc  contributors.md  decrypt_secret.sh  deploy.sh  docker-compose-ci.yaml  docker-compose.development.yaml  docker-compose.tc.yaml  docker-compose.yaml  example.env  init_a_project.py  install_gdal.sh  mapswipe_data_model.md  nginx_Dockerfile  postgres_Dockerfile  readme.md  recreate_container.sh  requirements.txt  run_container.py  run_mapswipe_worker.py  (+10 more)
ansible/: ansible.cfg  inventory.yml  playbook.yml
api/: Dockerfile  Pipfile  index.html  nginx.conf
cfg/: auth.py  configuration.json  loop_export_module.json  loop_import_module.json  loop_transfer_results.json  loop_update_module.json  your_config_file.cfg  your_config_file.json  your_configuration.json  your_serviceAccountKey.json
community-dashboard/: .babelrc  .env.example  .eslintignore  .unimportedrc.json  Dockerfile  README.md  codegen.yml  docker-compose.yml  package.json  postcss.config.js  (+3 more)
django/: Dockerfile  README.md  manage.py  pyproject.toml  pytest.ini  schema.graphql
django/apps/aggregated/: apps.py  factories.py  models.py
django/apps/aggregated/management/commands/: basic_schedule_jobs.py  import_aggregated_data.py  update_aggregated_data.py  update_project_groups_data.py
django/apps/aggregated/migrations/: 0001_initial.py  0002_alter_aggregatedtracking_managers_and_more.py
django/apps/existing_database/: apps.py  dataloaders.py  enums.py  factories.py  filters.py  models.py  ordering.py  query.py  test_queries.py  types.py  utils.py
django/apps/existing_database/management/commands/: create_dummy_existing_database_content.py  graphql_schema.py  update_organization_name.py
django/apps/existing_database/migrations/: 0001_initial.py  0002_mappingsession_mappingsessionresult.py
django/mapswipe/: asgi.py  dataloaders.py  db.py  db_router.py  graphql.py  managers.py  paginations.py  sentry.py  settings.py  tests.py  types.py  urls.py  utils.py  wsgi.py
django/scripts/: run_develop.sh  run_prod.sh  run_tests.sh
(+1462 files in other folders)
