[tool.poetry]
name = "mapswipe-django"
version = "0.1.0"
description = ""
authors = ["Mapswipe <info@mapswipe.org>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.10.2"  # Same as .python-version
Django = "^4.1.1"
django-cors-headers = "*"
django-cte = "*"
django-environ = "*"
factory-boy = "^3.2.1"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.3"
starlette = "^0.20.3"
strawberry-django-plus = "^1.14.1"
strawberry-graphql = "^0.114.1"
strawberry-graphql-django = "==0.3"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest-profiling = "*"
pytest-ordering = "*"
pytest-django = "*"
pytest-icdiff = "*"
ipython = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
