[tool.poetry]
name = "mapswipe-django"
version = "0.1.0"
description = ""
authors = ["Mapswipe <info@mapswipe.org>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
Django = "^4.2.14"
django-cors-headers = "*"
django-cte = "*"
django-environ = "*"
factory-boy = "^3.2.1"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.3"
python = "^3.10.2"  # Same as .python-version
schedule = "^1.1.0"
sentry-sdk = "*"
strawberry-graphql = "^0.177"
strawberry-django-plus = "*"

[tool.poetry.dev-dependencies]
django-stubs = "==4.2.6"  # NOTE: 4.2.7 is messing with TextChoices/IntergerChoices
ipython = "*"
pytest-django = "*"
pytest-icdiff = "*"
pytest-ordering = "*"
pytest-profiling = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
